# pokenet-image-classifier

./: .gitignore  README.md  models.py  pyproject.toml  requirements.txt  train_model.py
configs/: default.yaml
notebooks/: data_demo.ipynb  evaluation.ipynb  train.ipynb
pokenet/: __init__.py  dataloader.py
results/: train_results.txt  train_results_50_epochs.txt
scripts/: train.sbatch
slurm_logs/: train-44429618.out  train-44430250.out
src/: dataloader.py
