[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokenet"
version = "0.1.0"
description = "A Pokemon image classifier using CNNs"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "torch",
    "torchvision",
    "Pillow",
    "kagglehub",
    "numpy",
    "pytorch-lightning",
    "torchmetrics"
]

[tool.setuptools.packages.find]
include = ["pokenet*"]
